# authrs

./: .gitignore  Cargo.toml  docker-compose.yml
config/grafana/: datasource.yaml  grafana.ini
config/otel/: otel-collector.yaml
config/prometheus/: base_prometheus.yml
config/prometheus/targets/: postgres.json
config/tempo/: tempo.yaml
src/: environment.rs  main.rs  meter.rs  tracer.rs
src/server/: server.rs
